<resources>
    <string name="app_name">Heroes At Work</string>
    <string name="_"> </string>
    <string name="concatenate">%1$s %2$s</string>

    <string name="heroes">Heroes</string>
    <string name="started_on">Started on</string>
    <string name="ends_on">Ends on</string>
    <string name="main_hero">Main Hero</string>
    <string name="my_points">My Points</string>

    <string name="just_finished">Just finished</string>
    <string name="finishes_today">Finishes Today</string>
    <string name="finishes_tomorrow">Finishes Tomorrow</string>
    <string name="finishes_in_x_days">Finishes in %1$s days</string>
    <string name="create">Create!</string>
    <string name="tags">Tags</string>
    <string name="search">Search…</string>
    <string name="game_name">Game Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="points_per_hero">Points Per Hero</string>
    <string name="_200">200</string>
    <string name="remaining">Remaining</string>
    <string name="in_progress">In Progress</string>
    <string name="history">History</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="points">points</string>
    <string name="current_score">Current Score</string>
    <string name="date">Date</string>
    <string name="days_left">days left</string>
    <string name="points_given_by">Points given by</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="not_set">Not Set</string>

    <string name="com_auth0_client_id">13PXKi0ltwBeaf0NU42Zi2HL9lEvqZKT</string>
    <string name="com_auth0_domain">aynilab.auth0.com</string>

</resources>
