<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/heroes_margin_half"
    android:layout_marginBottom="@dimen/heroes_margin_half"
    android:padding="@dimen/heroes_margin"
    android:background="@color/background_card">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/game_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/title_light"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/started_on" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ends_on" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/heroes_margin">
                    <TextView
                        android:id="@+id/game_from_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/game_to_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_points" />

            <TextView
                android:id="@+id/hero_my_points_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end" />

        </LinearLayout>

    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_hero"
        android:layout_marginTop="8dp"
        android:textColor="@color/title_light"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/main_hero_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/heroes_margin"
            android:layout_toRightOf="@id/main_hero_image"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_hero_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/main_hero_points_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/main_hero_name_text"
                    android:layout_alignParentEnd="true" />

                <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                    android:id="@+id/main_hero_score_progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_below="@id/main_hero_name_text"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="@dimen/heroes_margin_half"
                    app:rcRadius="4dp"
                    app:rcReverse="false"
                    app:rcProgressColor="@color/heroes_green"
                    app:rcBackgroundColor="@color/heroes_light_gray" />

            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/heroes_margin_half"
        android:text="@string/heroes"
        android:textColor="@color/title_light"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:contentDescription="@string/_"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:contentDescription="@string/_"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:contentDescription="@string/_"/>

    </LinearLayout>

</LinearLayout>