<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:paddingTop="@dimen/heroes_margin"
    android:paddingBottom="@dimen/heroes_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remaining"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="@color/title_light" />

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/heroes_margin_half"
                android:background="@drawable/circle_background_green">

                <TextView
                    android:id="@+id/remaining_text"
                    android:layout_marginTop="@dimen/heroes_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textSize="40sp" />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/remaining_text"
                    android:layout_centerHorizontal="true"
                    android:text="@string/points"
                    android:layout_marginTop="-8dp"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/current_score_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_score"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="@color/title_light" />

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/heroes_margin_half"
                android:background="@drawable/circle_background_green">

                <TextView
                    android:id="@+id/current_score_text"
                    android:layout_marginTop="@dimen/heroes_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textSize="40sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/current_score_text"
                    android:layout_centerHorizontal="true"
                    android:text="@string/points"
                    android:layout_marginTop="-8dp"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="@color/title_light" />

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/heroes_margin_half"
                android:background="@drawable/circle_background_red">

                <TextView
                    android:id="@+id/days_left_text"
                    android:layout_marginTop="@dimen/heroes_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/days_left_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/days_left_text"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-8dp"/>

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heroes"
        android:textColor="@color/title_light"
        android:padding="@dimen/heroes_margin"

        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/heroes_recycler_view"
        android:paddingStart="@dimen/heroes_margin"
        android:paddingEnd="@dimen/heroes_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>